syntax = "proto3";
package message ;

message Message {
  oneof req_or_resp {
    Request req = 1;
    Response resp = 2;
  }
}

message Request {
  uint64 req_id = 1;
  oneof request {
    GetBlocksByNumRequest get_blocks_by_num_request = 2;
  }
}

message GetBlocksByNumRequest {
  repeated int64 nums = 1 [packed=true];
}


message Response {
  uint64 req_id = 1;
  oneof response {
      ErrorResponse error_response = 2;
      GetBlocksByNumResponse get_blocks_by_num_response = 3;
  }
}

message GetBlocksByNumResponse {
  repeated bytes blocks = 1;
}

message ErrorResponse {
  string error = 1;
}
